--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@fontsource/raleway": "^5.2.5",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
+    "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.6.1",
+    "react-toastify": "^11.0.5",
     "swiper": "^11.2.8"
   },
   "devDependencies": {
