--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^7.1.0",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
+    "mui-tel-input": "^9.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^18.2.0",
