--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@fontsource/poppins": "^5.2.6",
     "@fontsource/raleway": "^5.2.5",
     "@mui/icons-material": "^7.1.0",
-    "@mui/material": "^7.1.0",
+    "@mui/material": "^7.1.2",
+    "@mui/x-date-pickers": "^8.5.3",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^18.2.0",
