--- a/package.json
+++ b/package.json
@@ -16,30 +16,29 @@
     "@fontsource/raleway": "5.2.5",
     "@mui/icons-material": "7.1.0",
     "@mui/material": "7.1.0",
-
     "@mui/x-date-pickers": "8.7.0",
     "axios": "1.9.0",
     "bootstrap": "5.3.6",
     "date-fns": "4.1.0",
-
+    "jwt-decode": "^4.0.0",
     "mui-tel-input": "9.0.1",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-bootstrap": "2.10.10",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-dropzone": "14.3.8",
     "react-router-dom": "7.6.1",
     "react-toastify": "11.0.5",
     "swiper": "11.2.8"
   },
   "devDependencies": {
-    "@types/react": "18.3.23",
-    "@types/react-dom": "18.3.7",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react-swc": "3.5.0",
     "eslint": "8.57.0",
     "eslint-plugin-react": "7.34.1",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.4.6",
-    "typescript": "5.8.3",
+    "typescript": "^5.8.3",
     "vite": "5.4.19"
   }
 }
