--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dropzone": "14.3.8",
     "react-router-dom": "7.6.1",
     "react-toastify": "11.0.5",
+    "rollup": "^4.45.1",
     "swiper": "11.2.8"
   },
   "devDependencies": {
